--- a/uploader/index.html
+++ b/uploader/index.html
@@ -1,5 +1,6 @@
-<x-uploader />
-<script src="./index.js"></script>>
+<x-uploader></x-uploader>
+<script src="./index.js"></script>
+<!-- <script src="https://soe-sample.netlify.com/uploader/index.js"></script> -->
 <script>
   window.addEventListener('uploaded', function(e) {
     const {
