--- a/ozaqiita/index.html
+++ b/ozaqiita/index.html
@@ -1,2 +1,3 @@
 <oza-qiita></oza-qiita>
 <script src="./index.js"></script>
+<!-- <script src="https://soe-sample.netlify.com/ozaqiita/index.js"></script> -->
